Fix format icon centering on Firefox (#5029)
This is a small follow-up to #5022.  Firefox and Chromium calculated the specifity
slightly differently, leading to Firefox getting display: block rather than
display: flex (and the icon was not centered as a result).

This commit removes the conflicting rule, so we can be confident that we'll have
display: flex in Firefox or Chromium.

--- a/app/assets/stylesheets/components/record--sidebar.scss
+++ b/app/assets/stylesheets/components/record--sidebar.scss
@@ -21,9 +21,12 @@
     margin: 0 auto;
     padding: 0;
 
+    img {
+        display: block;
+    }
+
     img,
     .default {
-        display: block;
         margin: 0 auto;
         border: 1px solid #E1E1E1;
         border-radius: 10px;
